# RP2040-HAT-SOUND-C

./: .gitmodules  CMakeLists.txt  README.md  rp2040_hat_sound_c-patch.cmake  rp2040_hat_sound_c_sdk_version.cmake
examples/: CMakeLists.txt  main.c
examples/ftp_pdm_microphone/: CMakeLists.txt  README.md  w5x00_ftp_pdm_microphone.c
libraries/: CMakeLists.txt
libraries/microphone/: CMakeLists.txt
patches/: 01_iolibrary_driver_sound_ftp.patch  02_pico_sdk_heap_memory.patch
